--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
      <section class="bg-green-50 max-w-[1920px] px-28 mx-auto my-10">
       
-        <h1 class="text-center font-bold text-[#15803D] text-3xl">About the Campaign</h1>
-      <div class="grid grid-cols-1 md:flex items-center gap-6">
+        <h1 class="text-center font-bold text-[#15803D] text-3xl p-2">About the Campaign</h1>
+      <div class="grid grid-cols-1 md:flex items-center gap-7">
         <div>
           <img class="" src="./assets/about.png" alt="">
         </div>
