--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h1>Choose Your Trees</h1>
          </div>
 
-     <main class="bg-green-50 max-w-[1920px] gap-4 mx-auto px-28 my-6 grid-cols-1 lg:grid grid-cols-12">
+     <main class="bg-green-50 max-w-[1920px] gap-5 mx-auto px-28 my-6 grid-cols-1 lg:grid grid-cols-12">
          
         <div  class="left-div col-span-2">
             <h1 class="my-6 font-bold">Categories</h1>
@@ -80,7 +80,7 @@
           
         </div>
         <div class="right-div bg-white p-4 col-span-1 lg:col-span-3">
-          <h1>Your Cart</h1>
+          <h1 class="font-bold text-xl">Your Cart</h1>
           <div class="my-5 p-4 bg-green-50">
             <h1 class="font-bold">Mango Tree</h1>
             <p class="text-gray-400"><span>৳500</span>x 1 </p>
